# BackEnd

./: .dockerignore  Dockerfile  FRONTEND_GUIDE.md  JSON_REQUEST_GUIDE.md  README.md  chat_cli.py  db_connection.py  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  sample_data.json  server.py
.github/workflows/: fast-api-AutoDeployTrigger-d812468c-630d-4fa4-8bb7-566049d65835.yml
auth/: auth.py
models/: user_plan.py
routers/: chat.py  travel.py
schemas/: chat.py  state.py  travel.py
services/: itinerary_service.py  route_optimizer.py  search_service.py  travel_service.py  user_plan_service.py
tools/: __init__.py  travel_tools.py
